2006-11-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp.c: Version number is now 0.2.2; more robust and complete import
	* inp2shp/README: Added instructions regarding the EPANET toolkit patches
	* inp2shp/inp2shp.c: adding more error checks; use patched epanet2.dll
	* inp2shp_private.h:
	* inp2shp_private.rc: minor changes
	* inp2shp/patch/epanet_pump.diff:
	* inp2shp/patch/epanet_toolkit_pump.diff: Patches against EPANET 2.0.10.0
	to access pump and curve data through the toolkit
	
2006-11-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: Improved attribute import of valves and pumps
	(Improvements for bug #1469111); Usage change presumably fixes 
	bug #1598930 - awaiting testing
	* inp2shp/inp2shp.dev:
	* inp2shp/inp2shp_private.h:
	* inp2shp/inp2shp_private.rc:
	* inp2shp/msvc/inp2shp.dsp:
	* inp2shp/msvc/inp2shp.dsw: Added some IDE files

2006-09-16  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Switched from article to chapter;
	added dc_id tutorial; added quality control tutorial

2006-08-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.model.epanet.writeinpfile.ave: Set value of pipe.status to
	"closed" when it contains "closed". Implements RFE #1547032
	
2006-05-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: More comprehensive INP file import
	description
	
2006-05-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: 
	* dcwatdes.view.digitizepipe.ave: Added DN80
	* dcwatdesextension.make.ave: Version is 2.12.3+svn now

2006-05-23  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added elevation calculation tutorial.

2006-05-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* installer/dc.ico: Updated icon

2006-05-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* doc/en/dcwaterdesign.xml: