@@ -1,3 +1,9 @@
+2006-11-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* doc/docbook.xsl: Enabled saxon extensions, callout graphics
+	* doc/en/dcwaterdesign.xml: Improved inp2shp documentation, added more
+	XML ids to the document (not finished)
+
 2006-11-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* inp2shp.c: Version number is now 0.2.2; more robust and complete import
